# DiceGame

./: CMakeLists.txt  README.md  main.cpp
include/: Card.h  Dice.h  DiceSet.h  Game.h  Player.h  Row.h  Turn.h
src/: Card.cpp  Dice.cpp  DiceSet.cpp  Game.cpp  Player.cpp  Row.cpp  Turn.cpp
vscode_backup/: launch.json  settings.json  tasks.json
